# internal/http/router.go
@@ -3,6 +3,7 @@ package http
 import (
 	"net/http"
 	"pr-reviewer-assigment-service/internal/http/router"
+	"pr-reviewer-assigment-service/internal/http/v1/pull_requests"
 	"pr-reviewer-assigment-service/internal/http/v1/teams"
 	"pr-reviewer-assigment-service/internal/http/v1/users"
 
@@ -13,6 +14,7 @@ type RoutesHandlers struct {
 	Router      *router.Router
 	UserHandler *users.UsersHandler
 	TeamHandler *teams.TeamsHandler
+	PrHandler   *pull_requests.PullRequestHandler
 }
 
 func RegisterRoutes(h RoutesHandlers) http.Handler {
@@ -27,6 +29,10 @@ func RegisterRoutes(h RoutesHandlers) http.Handler {
 	teamsGroup := r.Group("/team")
 	teamsGroup.POST("/add", h.TeamHandler.Add)
 	teamsGroup.GET("/get", h.TeamHandler.Get)
+
+	// prs
+	prGroup := r.Group("/pullRequest")
+	prGroup.POST("/create", h.PrHandler.Create)
 
 	// swagger
 	r.GET("/swagger", httpSwagger.WrapHandler)
