# internal/http/v1/pull_requests/dto.go
@@ -1,5 +1,7 @@
 package pull_requests
 
+import "time"
+
 type CreatePRRequest struct {
 	PullRequestID   string `json:"pull_request_id"`
 	PullRequestName string `json:"pull_request_name"`
@@ -7,13 +9,22 @@ type CreatePRRequest struct {
 }
 
 type PullRequestResponse struct {
-	PullRequestID     string   `json:"pull_request_id"`
-	PullRequestName   string   `json:"pull_request_name"`
-	AuthorID          string   `json:"author_id"`
-	Status            string   `json:"status"`
-	AssignedReviewers []string `json:"assigned_reviewers"`
+	PullRequestID     string     `json:"pull_request_id"`
+	PullRequestName   string     `json:"pull_request_name"`
+	AuthorID          string     `json:"author_id"`
+	Status            string     `json:"status"`
+	AssignedReviewers []string   `json:"assigned_reviewers"`
+	MergedAt          *time.Time `json:"mergedAt,omitempty"`
 }
 
 type CreatePRResponse struct {
+	PullRequest PullRequestResponse `json:"pr"`
+}
+
+type MergePRRequest struct {
+	PullRequestID string `json:"pull_request_id"`
+}
+
+type MergePRResponse struct {
 	PullRequest PullRequestResponse `json:"pr"`
 }
